Created new file "menu.html" that now hold navbar menu code to reduce redundancy. Updated formatting in layout.css

--- a/CSS/layout.css
+++ b/CSS/layout.css
@@ -350,6 +350,9 @@ nav .menu_content .links {
 
 .menu_content .links .dropdown-container {
     padding: 5px 5px 5px 5px;
+    max-height: 600px;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 /*************END OF MENU*******************/
